# sample_sse

./: README.adoc  README.md  docker-compose.yml
generator/: Dockerfile  main.py  pyproject.toml
server/: Dockerfile  main.py  pyproject.toml
web/: Caddyfile
web/ui/: index.html  index.js
