[tool.poetry]
name = "sse-generator"
version = "0.1.0"
description = ""
authors = ["Will Siddall <will.siddall@teck.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
